# us-foods-interview

./: .gitignore  .mypy.ini  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: log_utils.py  main.py  train_script.py
app/model/: train.py
tests/model/: test_train.py
